Fixed broken tests with reorganization of scripts.  Moving environment management into a strategy for the deployer.

--- a/CM.Deployer/CM.Deployer.csproj
+++ b/CM.Deployer/CM.Deployer.csproj
@@ -58,7 +58,9 @@
     <Compile Include="DeployLog.Designer.cs">
       <DependentUpon>DeployLog.cs</DependentUpon>
     </Compile>
+    <Compile Include="EnvironmentFilesLoader.cs" />
     <Compile Include="IDeployView.cs" />
+    <Compile Include="IEnvironmentLoader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="DeployForm.resx">
