--- a/CM.UnitTests/CM.UnitTests.csproj
+++ b/CM.UnitTests/CM.UnitTests.csproj
@@ -46,8 +46,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\NetworkDirectoryTest.cs" />
-    <Compile Include="Deploy.UI\DeployFormPresenterTest.cs" />
     <Compile Include="Deploy.UI\EnvironmentFilesLoaderTest.cs" />
+    <Compile Include="Deploy.UI\MSBuildCommandBuilderTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
