--- a/CM.UnitTests/CM.UnitTests.csproj
+++ b/CM.UnitTests/CM.UnitTests.csproj
@@ -45,9 +45,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CM.Deployer\EnvironmentFilesLoaderTest.cs" />
+    <Compile Include="CM.Deployer\MSBuildCommandBuilderTest.cs" />
     <Compile Include="Common\NetworkDirectoryTest.cs" />
-    <Compile Include="Deploy.UI\EnvironmentFilesLoaderTest.cs" />
-    <Compile Include="Deploy.UI\MSBuildCommandBuilderTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
