Got rid of the ugly IList<KeyValuePair<string, string>> interface for properties in lieu of a custom class

--- a/CM.Deployer/CM.Deployer.csproj
+++ b/CM.Deployer/CM.Deployer.csproj
@@ -89,6 +89,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="PropertyList.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CM.Common\CM.Common.csproj">
