--- a/CM.Deployer/app.config
+++ b/CM.Deployer/app.config
@@ -11,7 +11,7 @@
                 <value>Environments</value>
             </setting>
             <setting name="ConfigurationFileExtension" serializeAs="String">
-                <value>.properties</value>
+                <value>properties</value>
             </setting>
             <setting name="MSBuildFilename" serializeAs="String">
                 <value>missing</value>
